Link to Composer install doc; add contributor stevector

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -159,3 +159,10 @@ contributors:
     twitter: masonjames
     url: //www.valet.io/
     bio: CEO | Founder of WP Valet
+  stevector:
+    name: Steve Persch
+    avatar: //pantheon.io/sites/default/files/styles/540x540_top/public/Steve%20Persch%20Headshot.jpg
+    url: //stevector.com/
+    twitter: stevector
+    github: //github.com/stevector
+    bio: Agency & Community Engineer
