Resolve slimerjs npm install error by upgrading sitespeed.io to 4.0.0-alpha.5, update sitespeed command and align php version with ubuntu 14.04 build env for circle since TLS1.2 is disabled on ubuntu 12.04

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "grunt-replace": "^0.11.0",
     "highlight.js": "^9.3.0",
     "node-font-awesome": "^1.0.2",
-    "sitespeed.io": "^3.11.5"
+    "sitespeed.io": "4.0.0-alpha.5"
   },
   "scripts": {
     "test": "grunt && rake && scripts/merge_conflicts.sh"
