Alt Docroot beta draft

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -174,3 +174,10 @@ contributors:
     twitter: andrew_mallis
     drupal: https://www.drupal.org/user/72871
     bio: A Bay Area-based polymedia artist & technologist | Co-founder @kalamuna
+  ataylorme:
+    name: Andrew Taylor
+    avatar: //pantheon.io/sites/default/files/styles/540x540_top/public/Andrew%20Taylor.jpg
+    github: //github.com/ataylorme
+    twitter: ataylorme
+    url: //www.ataylor.me/
+    bio: Agency and Community Engineer
