--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -166,3 +166,11 @@ contributors:
     twitter: stevector
     github: //github.com/stevector
     bio: Agency & Community Engineer
+  andrewmallis:
+    name: Andrew Mallis
+    avatar: //avatars1.githubusercontent.com/u/249362?v=3&s=400
+    url: //www.kalamuna.com/about/#andrew-mallis
+    github: //github.com/andrewmallis
+    twitter: andrew_mallis
+    drupal: https://www.drupal.org/user/72871
+    bio: A Bay Area-based polymedia artist & technologist | Co-founder @kalamuna
