Add in contributor for cteitzel

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -181,3 +181,14 @@ contributors:
     twitter: ataylorme
     url: //www.ataylor.me/
     bio: Agency and Community Engineer
+  cteitzel:
+    name: Chris Teitzel
+    avatar: //avatars0.githubusercontent.com/u/1548058
+    url: //lockr.io
+    github: //github.com/cellar-door
+    twitter: technerdteitzel
+    linkedin: //www.linkedin.com/in/christeitzel
+    drupal: https://www.drupal.org/user/658076
+    wordpress: https://profiles.wordpress.org/cteitzel
+    bio: Seattle based developer and entrepreneur | Founder of @keylockr and Cellar Door Media
+
