--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -6,6 +6,33 @@ subtitle: Information for building, launching, and running dynamic sites on the 
 url: /docs
 site_url: https://pantheon.io
 assets_version: 3.5
+terminuspages:
+      -
+          name: Getting Started
+          url: /docs/terminus/
+          slug: /docs/terminus/
+      -
+          name: Install & Setup
+          url: /docs/terminus/install/
+          slug: /docs/terminus/install/
+      -
+          name: Examples
+          url: /docs/terminus/examples/
+          slug: /docs/terminus/examples/
+      -
+          name: Extend
+          url: /docs/terminus/extend/
+          slug: /docs/terminus/extend/
+      -
+          name: Command Ref
+          url: /docs/terminus/commands/
+          slug: /docs/terminus/commands/
+      -
+          name: Version Updates
+          url: /docs/terminus/versions/
+          slug: /docs/terminus/versions/
+
+
 
 managing: Learn how to manage sites, users, teams, and organizations on Pantheon.
 developing: Learn how to build and launch your site on Pantheon.
