Twig extension text, move terminus pages to docs subdir for shared taxonomies

--- a/app/config/sculpin_kernel.yml
+++ b/app/config/sculpin_kernel.yml
@@ -9,10 +9,12 @@ sculpin_content_types:
         enabled: true
 
     terminuspages:
-        singular_name: terminuspage
+        type: meta
+        taxonomies:
+            - categories
+            - tags
+            - contributors
         permalink: docs/terminus/:basename/
-        path: docs/_terminuspages
-        layout: terminuspage
 
     docs:
         type: path
