--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -6,54 +6,12 @@ subtitle: Information for building, launching, and running dynamic sites on the 
 url: /docs
 site_url: https://pantheon.io
 assets_version: 3.5
-terminuspages:
-      -
-          name: Getting Started
-          url: /docs/terminus/
-          slug: /docs/terminus/
-      -
-          name: Install & Setup
-          url: /docs/terminus/install/
-          slug: /docs/terminus/install/
-      -
-          name: Commands
-          url: /docs/terminus/commands/
-          slug: /docs/terminus/commands/
-      -
-          name: Example Usage
-          url: /docs/terminus/examples/
-          slug: /docs/terminus/examples/
-      -
-          name: Extend
-          url: /docs/terminus/extend/
-          slug: /docs/terminus/extend/
-      -
-          name: Plugins
-          url: /docs/terminus/extend/plugins/
-          slug: /docs/terminus/extend/plugins/
-      -
-          name: Create Plugins
-          url: /docs/terminus/extend/create-plugins/
-          slug: /docs/terminus/extend/create-plugins/
-      -
-          name: Contribute
-          url: /docs/terminus/contribute/
-          slug: /docs/terminus/contribute/
-      -
-          name: Style Guide
-          url: /docs/terminus/contribute/style-guide
-          slug: /docs/terminus/contribute/style-guide
-      -
-          name: Version Updates
-          url: /docs/terminus/versions/
-          slug: /docs/terminus/versions/
-
 
 
 managing: Learn how to manage sites, users, teams, and organizations on Pantheon.
 developing: Learn how to build and launch your site on Pantheon.
 featured: Get answers to common questions by browsing our most frequently used docs.
-
+terminus_subtitle: Terminus Manual
 
 #######################################################################################################
 # The contributors. Include your info here, under the "contributors" key, using the following template:
