Create contrib profile

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -204,3 +204,8 @@ contributors:
     github: //github.com/rachelwhitton
     twitter: rachwhitton
     bio: Technical Content Writer
+  peter-pantheon:
+    name: Peter Sawczynec
+    avatar: //pantheon.io/sites/default/files/styles/540x540_top/public/Peter%20Sawczynec.jpg
+    bio: Senior Customer Success Engineer
+    github: //github.com/peter-pantheon
