Copy edits, attribution, update doc title throughout

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -191,4 +191,10 @@ contributors:
     drupal: https://www.drupal.org/user/658076
     wordpress: https://profiles.wordpress.org/cteitzel
     bio: Seattle based developer and entrepreneur | Founder of @keylockr and Cellar Door Media
-
+  bwood:
+    name: Brian Wood
+    avatar: //avatars2.githubusercontent.com/u/185537
+    github: //github.com/bwood
+    twitter: getbwood
+    drupal: //www.drupal.org/u/bwood
+    bio: Applications Programmer UC Berkeley, IST Web Platform Services
