--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
       "behat/mink-selenium2-driver": "1.2",
       "composer/composer": "^1.0@alpha",
       "pantheon-systems/terminus": "^0.12.0",
-      "dflydev/embedded-composer": "^1.0@dev",
-      "zeroclipboard/zeroclipboard": "^2.2"
+      "dflydev/embedded-composer": "^1.0@dev"
   },
   "config": {
       "bin-dir": "bin"
