Fix md ref link, correct taxon syntax, add contrib profile

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -198,3 +198,9 @@ contributors:
     twitter: getbwood
     drupal: //www.drupal.org/u/bwood
     bio: Applications Programmer UC Berkeley, IST Web Platform Services
+  rachelwhitton:
+    name: Rachel Whitton
+    avatar: //pantheon.io/sites/default/files/styles/540x540_top/public/RachelNew.jpg
+    github: //github.com/rachelwhitton
+    twitter: rachwhitton
+    bio: Technical Content Writer
