--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "highlight.js": "^9.3.0",
     "node-font-awesome": "^1.0.2",
     "sitespeed.io": "4.0.0-alpha.5",
-    "clipboard": "^1.5.12"
+    "clipboard": "^1.5.12",
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-material": "^1.1.1"
 
   },
   "scripts": {
