Topic content type, dynamic authors, and clean up

--- a/app/config/sculpin_kernel.yml
+++ b/app/config/sculpin_kernel.yml
@@ -26,3 +26,24 @@ sculpin_content_types:
             - tags
             - contributors
         permalink: docs/guides/:basename/
+
+    videos:
+        type: path
+        path: _videos
+        singular_name: video
+        enabled: true
+        taxonomies:
+            - categories
+            - tags
+            - contributors
+        permalink: docs/videos/:basename/
+    topics:
+        type: path
+        path: _topics
+        singular_name: topic
+        enabled: true
+        taxonomies:
+            - categories
+            - tags
+            - contributors
+        permalink: docs/:basename/
