--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "behat/mink-goutte-driver": "1.1.*@stable",
         "behat/mink-selenium2-driver": "1.2",
         "composer/composer": "^1.0@alpha",
-        "guzzlehttp/guzzle": "6.1.*@stable",
-        "pantheon-systems/terminus": "0.11.*@stable",
+        "guzzlehttp/guzzle": "6.2.*@stable",
+        "pantheon-systems/terminus": "dev-master",
         "dflydev/embedded-composer": "^1.0@dev"
     },
     "config": {
