Add goaccess script to docs

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -239,3 +239,9 @@ contributors:
     drupal: https://www.drupal.org/u/mcdwayne
     wordpress: https://profiles.wordpress.org/mcdwayne
     bio: Agency and Community Success Manager
+  albertcausing:
+    name: Albert Causing
+    bio: Customer Success Engineer
+    avatar: //avatars0.githubusercontent.com/u/17841145
+    twitter: acausing
+    drupal: https://www.drupal.org/u/acausing
