--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "behat/mink-selenium2-driver": "1.2",
         "composer/composer": "^1.0@alpha",
         "guzzlehttp/guzzle": "6.2.*@stable",
-        "pantheon-systems/terminus": "1.0.0-beta.1",
+        "pantheon-systems/terminus": "1.0.0",
         "dflydev/embedded-composer": "^1.0@dev"
     },
     "config": {
