--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "node-font-awesome": "^1.0.2",
     "sitespeed.io": "4.0.0-alpha.5",
     "clipboard": "^1.5.12",
-    "angular": "^1.5.8",
-    "angular-animate": "^1.5.8",
-    "angular-aria": "^1.5.8",
+    "angular": "1.5.8",
+    "angular-animate": "1.5.8",
+    "angular-aria": "1.5.8",
     "angular-material": "^1.1.1",
     "angular-md": "^1.0.0",
     "marked": "^0.3.6"
