--- a/app/config/sculpin_kernel.yml
+++ b/app/config/sculpin_kernel.yml
@@ -22,3 +22,9 @@ sculpin_content_types:
             - categories
             - tags
             - contributors
+    videos:
+        type: meta
+        taxonomies:
+            - categories
+            - tags
+            - contributors
