First pass on reusable content type for training guides - delete getting-started doc

--- a/app/config/sculpin_kernel.yml
+++ b/app/config/sculpin_kernel.yml
@@ -28,3 +28,15 @@ sculpin_content_types:
             - categories
             - tags
             - contributors
+
+    gettingstartedpages:
+        type: path
+        path: docs/guides/getting-started
+        permalink: pretty
+        singular_name: gettingstartedpage
+        enabled: true
+        layout: guide
+        taxonomies:
+            - categories
+            - tags
+            - contributors
