--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -254,3 +254,12 @@ contributors:
     github: https://github.com/tessak22
     avatar: //pantheon.io/sites/default/files/styles/540x540_top/public/JMP_9650-800x800.jpg
     linkedin: http://linkedin.com/in/tessak22
+  alexfornuto:
+    name: Alex Fornuto
+    url: https://alexfornuto.com
+    avatar: //pantheon.io/sites/default/files/styles/540x540_top/public/Alex%20Fornuto.jpg
+    twitter: alexfornuto
+    gplus: https://plus.google.com/+AlexFornuto
+    github: https://github.com/alexfornuto
+    linkedin: https://www.linkedin.com/in/alexfornuto/
+    bio: Technical Content Editor for Pantheon.
