--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "minimum-stability": "dev",
     "require-dev": {
         "sculpin/sculpin": "v2.1.1",
-        "symfony/console": "2.8.x-dev as 3.2",
+        "symfony/console": "2.8.x-dev as 3.3",
         "behat/behat": "3.0.*@stable",
         "behat/mink": "1.6.*@stable",
         "behat/mink-extension": "2.0.*@stable",
@@ -16,7 +16,7 @@
         "behat/mink-selenium2-driver": "1.2",
         "composer/composer": "^1.0@alpha",
         "guzzlehttp/guzzle": "6.2.*@stable",
-        "pantheon-systems/terminus": "1.3.*",
+        "pantheon-systems/terminus": "1.*.*",
         "dflydev/embedded-composer": "^1.0@dev"
     },
     "config": {
