Clean up content types, get ready to separate goinglive work

--- a/app/config/sculpin_kernel.yml
+++ b/app/config/sculpin_kernel.yml
@@ -43,7 +43,7 @@ sculpin_content_types:
             - contributors
     cachecontrolpages:
         type: path
-        path: docs/guides/cache-control
+        path: docs/guides/cache
         permalink: pretty
         singular_name: cachecontrolpage
         enabled: true
