Rename going live guide, guide-ify instructions and split domains page

--- a/app/config/sculpin_kernel.yml
+++ b/app/config/sculpin_kernel.yml
@@ -41,11 +41,11 @@ sculpin_content_types:
             - categories
             - tags
             - contributors
-    goinglivepages:
+    launchpages:
         type: path
-        path: docs/guides/going-live
+        path: docs/guides/launch
         permalink: pretty
-        singular_name: goinglivepage
+        singular_name: launchpage
         enabled: true
         layout: guide
         taxonomies:
