Refactor #2597 PagerDuty guide
- Use paginated guide layout
- Setup New Relic Ping Monitors with Synthetics specifically since our new edge uses TLS 1.2 and SNI
- Clean up steps and screenshots
- Copy edits

--- a/app/config/sculpin_kernel.yml
+++ b/app/config/sculpin_kernel.yml
@@ -52,3 +52,14 @@ sculpin_content_types:
             - categories
             - tags
             - contributors
+    pagerdutypages:
+        type: path
+        path: docs/guides/pagerduty
+        permalink: pretty
+        singular_name: pagerdutypage
+        enabled: true
+        layout: guide
+        taxonomies:
+            - categories
+            - tags
+            - contributors
