--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -254,3 +254,10 @@ contributors:
     github: https://github.com/tessak22
     avatar: //pantheon.io/sites/default/files/styles/540x540_top/public/JMP_9650-800x800.jpg
     linkedin: http://linkedin.com/in/tessak22
+  eabquina:
+    name: Eladio Abquina
+    bio: Customer Success Engineer
+    twitter: eabquina
+    github: //github.com/eabquina
+    avatar: //pbs.twimg.com/profile_images/1290706689/SAMPLE2_400x400.jpg
+    linkedin: //ph.linkedin.com/in/eabquina
