Add contrib profile for LukasRos

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -261,3 +261,10 @@ contributors:
     github: //github.com/eabquina
     avatar: //pbs.twimg.com/profile_images/1290706689/SAMPLE2_400x400.jpg
     linkedin: //ph.linkedin.com/in/eabquina
+  LukasRos:
+    name: Lukas Rosenstock
+    twitter: LukasRosenstock
+    linkedin: //www.linkedin.com/in/lukasros
+    bio: API, Cloud & Integration Expert
+    avatar: //avatars3.githubusercontent.com/u/192050
+    github: //github.com/LukasRos
