--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -261,6 +261,12 @@ contributors:
     github: //github.com/eabquina
     avatar: //pbs.twimg.com/profile_images/1290706689/SAMPLE2_400x400.jpg
     linkedin: //ph.linkedin.com/in/eabquina
+  alexfornuto:
+    name: Alex Fornuto
+    avatar: //pantheon.io/sites/default/files/styles/540x540_top/public/Alex%20Fornuto.jpg
+    github: //github.com/alexfornuto
+    twitter: AlexFornuto
+    bio: Technical Content Editor
   LukasRos:
     name: Lukas Rosenstock
     twitter: LukasRosenstock
