--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -274,3 +274,15 @@ contributors:
     bio: API, Cloud & Integration Expert
     avatar: //avatars3.githubusercontent.com/u/192050
     github: //github.com/LukasRos
+  dgorton:
+    name: Drew Gordon
+    twitter: dgorton
+    bio: Director, Agency and Community Outreach
+    avatar: //pantheon.io/sites/default/files/styles/540x540_top/public/d0d17cbd-a445-4a69-bdc7-62b39bb90069.jpeg
+    github: //github.com/dgorton
+  dts:
+    name: Drew Gordon
+    twitter: DavidStrauss
+    bio: CTO & Co-Founder
+    avatar: //pantheon.io/sites/default/files/styles/540x540_top/public/david_0.jpg
+    github: //github.com/davidstrauss
