--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -281,7 +281,7 @@ contributors:
     avatar: //pantheon.io/sites/default/files/styles/540x540_top/public/d0d17cbd-a445-4a69-bdc7-62b39bb90069.jpeg
     github: //github.com/dgorton
   dts:
-    name: Drew Gordon
+    name: David Strauss
     twitter: DavidStrauss
     bio: CTO & Co-Founder
     avatar: //pantheon.io/sites/default/files/styles/540x540_top/public/david_0.jpg
