--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -275,7 +275,7 @@ contributors:
     avatar: //avatars3.githubusercontent.com/u/192050
     github: //github.com/LukasRos
   dgorton:
-    name: Drew Gordon
+    name: Drew Gorton
     twitter: dgorton
     bio: Director, Agency and Community Outreach
     avatar: //pantheon.io/sites/default/files/styles/540x540_top/public/d0d17cbd-a445-4a69-bdc7-62b39bb90069.jpeg
