--- a/app/config/sculpin_kernel.yml
+++ b/app/config/sculpin_kernel.yml
@@ -1,5 +1,5 @@
 sculpin:
-    ignore: ["*.swp"]
+    ignore: ["**/*.swp"]
 sculpin_theme:
     theme: sculpin/bootstrap-3-blog-theme
 sculpin_content_types:
