First pass on guide to partially adopt composer

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -294,3 +294,11 @@ contributors:
     github: //github.com/danielbachhuber
     linkedin: https://www.linkedin.com/in/danielbachhuber
     url: https://handbuilt.co/
+  dustinleblanc:
+    name: Dustin LeBlanc
+    twitter: DustinLeblanc
+    bio: Customer Success Engineer
+    avatar: //pantheon.io/sites/default/files/styles/540x540_top/public/Dustin%20LeBlanc.jpg
+    github: //github.com/dustinleblanc
+    linkedin: https://www.linkedin.com/in/dustinleblanc
+    url: https://dustinleblanc.com/
