add working directory to circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/php:5.6-apache-node-browsers
+    working_directory: ~/documentation
     steps:
       - checkout
       - run:
