--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,10 +25,10 @@ jobs:
             cd ..
             # Deploy Multidev environment
             bash scripts/deploy-multidev.sh
-      - run:
-          name: Start Ghost Driver
-          command: phantomjs --webdriver=8643
-          background: true
+     # - run:
+     #     name: Start Ghost Driver
+     #     command: phantomjs --webdriver=8643
+     #     background: true
       - run:
           name: Start Sculpin
           command: bin/sculpin server
@@ -38,7 +38,7 @@ jobs:
           command: |
             echo
             # Run sitespeed.io performance testing.
-            bash scripts/run-sitespeed-test.sh
+            #bash scripts/run-sitespeed-test.sh
             # Run behat.
             bin/behat
             # Run a11y.
