--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "grunt-replace": "^0.11.0",
     "highlight.js": "^9.3.0",
     "node-font-awesome": "^1.0.2",
-    "sitespeed.io": ">=6.3.5",
+    "sitespeed.io": "4.0.0-alpha.5",
     "clipboard": "^1.5.12",
     "angular": "1.5.8",
     "angular-animate": "1.5.8",
